Improved and simplified the contribution scanners. Integrated the support for determining contribution dependencies in the admin app.
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@631891 13f79535-47bb-0310-9956-ffa450edef68